--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,5 @@
   font-family: "Roboto Light", system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  background-color: #F6F6F6;
 }
