--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -3,7 +3,7 @@
   border: #EEE solid 1px;
   background-color: white;
   min-width: 300px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0 6px 12px -2px, rgba(0, 0, 0, 0.3) 0 3px 7px -3px;
   .CardImage {
     max-width: 100%;
   }
