--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -6,6 +6,8 @@
   box-shadow: rgba(50, 50, 93, 0.25) 0 6px 12px -2px, rgba(0, 0, 0, 0.3) 0 3px 7px -3px;
   .CardImage {
     max-width: 100%;
+    width: 384px;
+    height: 183px;
   }
   .CardBody {
     padding: 8px;
