--- a/src/App.scss
+++ b/src/App.scss
@@ -6,9 +6,9 @@
 }
 
 #root {
-    text-align: center;
     .MainTitle {
         text-transform: uppercase;
+        color: #5800A1;
     }
     .Job {
         font-style: italic;
