--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -1,15 +1,21 @@
 .Card {
   width: 384px;
-  border: #EEE solid 1px;
-  background-color: white;
+  border: black solid 1px;
+  background-color: #101010;
   min-width: 300px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0 6px 12px -2px, rgba(0, 0, 0, 0.3) 0 3px 7px -3px;
+  //box-shadow: rgba(50, 50, 93, 0.25) 0 6px 12px -2px, rgba(0, 0, 0, 0.3) 0 3px 7px -3px;
   .CardImage {
     max-width: 100%;
     width: 384px;
     height: 183px;
   }
   .CardBody {
+    .CardName {
+      color: #5800A1;
+    }
+    .CardLink {
+      color: #5800A1;
+    }
     padding: 8px;
     .TagContainer {
       display: flex;
@@ -17,7 +23,7 @@
       flex-wrap: nowrap;
       overflow: hidden;
       .Tag {
-        background: aqua;
+        background: #5800A1;
         padding: 0 8px 0 8px;
         border-radius: 50px;
       }
