--- a/src/components/ProjectCard.scss
+++ b/src/components/ProjectCard.scss
@@ -1,12 +1,12 @@
-.TagContainer {
-  display: flex;
-  gap: 8px;
-  flex-wrap: nowrap;
-  overflow: hidden;
-  .Tag {
-    color: white;
-    background: #5800A1;
-    padding: 0 8px 0 8px;
-    border-radius: 50px;
-  }
-}
+//.TagContainer {
+//  display: flex;
+//  gap: 8px;
+//  flex-wrap: nowrap;
+//  overflow: hidden;
+//  .Tag {
+//    color: white;
+//    background: #5800A1;
+//    padding: 0 8px 0 8px;
+//    border-radius: 50px;
+//  }
+//}
