--- a/src/App.scss
+++ b/src/App.scss
@@ -16,4 +16,19 @@
     .Canvas {
         height: 50vh !important;
     }
+    .wrapper {
+        padding: 10px;
+        width: 668px;
+        height: 432px;
+        transform: scale(0.5);
+        transform-origin: top left;
+    }
+    .content {
+        width: 334px;
+        height: 216px;
+        background: #f0f0f0;
+        border-radius: 3px;
+        overflow-y: auto;
+        padding: 0;
+    }
 }
