--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,6 @@
-.sectionContainer {
-    min-height: 100vh;
-}
-
 #root {
-    .hero {
-        height: 100vh;
+    .hero, .sectionContainer {
+        min-height: 100vh;
     }
 
     .menu {
