--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@
             justify-content: center;
             gap: 50px;
             font-size: 28px;
+            flex-wrap: wrap;
         }
     }
 }
